galen-core/src/test/resources/negative-specs/no-object-in-section.spec
# negative spec

object:
    absent
    
@ another section
----------------------------
    inside: object 2px left
    
@ one more section
----------------------------
object:
    width: 90px
    